--- a/NorthWind.ConsoleApp/NorthWind.ConsoleApp.csproj
+++ b/NorthWind.ConsoleApp/NorthWind.ConsoleApp.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
   <ItemGroup>
     <ProjectReference Include="..\NorthWind.Writers\NorthWind.Writers.csproj" />
   </ItemGroup>
